--- a/src/components/Marquee.css
+++ b/src/components/Marquee.css
@@ -17,7 +17,7 @@
 }
 
 .marquee-track span {
-  font-family: 'Bebas Neue', cursive;
+  font-family: 'Aller Display', sans-serif;
   font-size: 40px;
   color: transparent;
   -webkit-text-stroke: 1px rgb(255, 255, 255);
